# Mudar-Cost-

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  hermes-verify-db-indexes.py  hermes-verify.py  package-lock.json  playwright.config.ts  render.yaml  vercel.json
backend/: .dockerignore  .env.test  Dockerfile  Makefile  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_full_schema.py  0003_pgvector_embeddings.py  0004_add_missing_indexes.py  0004_verify_seed_data.py  0005_add_drawing_sha256.py  0006_add_failed_jobs_table.py
backend/app/: celery_app.py  config.py  database.py  main.py  minio_client.py  models.py
backend/app/ai/: __init__.py  circuit_breaker.py  deepseek_client.py  detection_cache.py  embedder.py  merge_strategy.py  mimo_client.py  models.py  pipeline.py  rasterizer.py  router.py  training.py
backend/app/models/: __init__.py  assets_templates.py  core.py  (+7 more)
backend/infra/: docker-compose.monitoring.yml
backend/scripts/: connectivity_test.py  generalize_test.py  verify_ai_connectivity.py  verify_migration.py  verify_rates.py  verify_seed.py
backend/seed/: run_seed.py  seed_materials.py
backend/tests/: conftest.py  test_ai_contract.py  test_ai_features.py  test_cost_engine.py  test_db_integrity.py  test_deepseek_client.py  test_dependency_engine.py  test_drawing_service.py  test_export_service.py  test_health.py  test_material_selector.py  test_mimo_client.py  test_rule_engine.py
(+179 files in other folders)
